# xtracker_bot

./: Dockerfile  docker-compose.yml  pyproject.toml  readme.md  sample.env
bot/: __main__.py
bot/fsm/: set_channel_states.py
bot/utils/: config.py  redis.py
