[tool.poetry]
name = "tracker-bot"
version = "0.1.0"
description = ""
authors = ["denver-code <csigorek@gmail.com>"]
readme = "README.md"
packages = [{include = "tracker_bot"}]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = {git = "https://github.com/aiogram/aiogram", branch = "dev-3.x"}
python-dotenv = "^1.0.0"
redis = "^4.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
